# MPC_HighLevelController

./: CMakeLists.txt  README.md  config.yaml  main.cpp
MPC/: CMakeLists.txt  MPCController.cpp  MPCController.hpp  ObstacleLoader.cpp  ObstacleLoader.hpp
Obstacle_Info/: obstacle.json
visuals/: generate_trajectory.py  mpc_log.csv
